Fixed background color of the update banner in dark mode
refs https://github.com/TryGhost/Ghost/issues/16819

--- a/ghost/admin/app/styles/app-dark.css
+++ b/ghost/admin/app/styles/app-dark.css
@@ -1534,3 +1534,8 @@ kbd {
 .gh-editor-feedback-dropdown {
     background: var(--whitegrey-l1);
 }
+
+/* Update banner */
+.gh-update-banner {
+    background: var(--main-color-content-greybg);
+}
